--- a/Netology_IB_Instruments/ProfileView.xib
+++ b/Netology_IB_Instruments/ProfileView.xib
@@ -10,9 +10,9 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <view contentMode="scaleToFill" id="iN0-l3-epB">
-            <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
-            <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+        <view contentMode="scaleToFill" id="iN0-l3-epB" customClass="ProfileView" customModule="Netology_IB_Instruments" customModuleProvider="target">
+            <rect key="frame" x="0.0" y="0.0" width="414" height="304"/>
+            <autoresizingMask key="autoresizingMask" flexibleMinX="YES" widthSizable="YES" flexibleMaxX="YES" flexibleMinY="YES" flexibleMaxY="YES"/>
             <subviews>
                 <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="ProfilePhoto" translatesAutoresizingMaskIntoConstraints="NO" id="Pmb-if-gaD">
                     <rect key="frame" x="32" y="32" width="120" height="120"/>
@@ -54,7 +54,15 @@
             </subviews>
             <viewLayoutGuide key="safeArea" id="vUN-kp-3ea"/>
             <color key="backgroundColor" systemColor="systemBackgroundColor"/>
-            <point key="canvasLocation" x="137.68115942028987" y="81.696428571428569"/>
+            <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
+            <connections>
+                <outlet property="cityLabel" destination="eH9-JD-REx" id="KbW-Nn-m9Y"/>
+                <outlet property="dateOfBirthLabel" destination="QmW-ZA-9WO" id="ils-8W-fvb"/>
+                <outlet property="nameLabel" destination="jvk-hj-hTc" id="snC-jH-drJ"/>
+                <outlet property="profileImage" destination="Pmb-if-gaD" id="Xkn-n3-dlk"/>
+                <outlet property="profileTextView" destination="xV3-hr-3Av" id="xx7-sj-JMO"/>
+            </connections>
+            <point key="canvasLocation" x="137.68115942028987" y="-116.18303571428571"/>
         </view>
     </objects>
     <resources>
